# Factorio_Json_to_blueprint

./: .gitignore  CMakeLists.txt  Makefile  README.md
hdr/: arguments.h  base64.h  compress.h  error.h  files.h
include/: libblueprint.h
lib/: Makefile
lib/hdr/: file.h  lst.h  parr.h
lib/src/file/: close.c  open.c
lib/src/lst/: clear.c  new_back.c  to_obj.c
lib/src/parr/: clear.c  free.c  tools.c
src/: main.c  wrapper.c
src/arguments/: check.c  get.c
src/base64/: base64.c
src/compress/: compress.c
src/files/: check.c  read.c  write.c
